tests/neg/3559c.scala
class A(a: Any) {
  def this() = {
    this(a)           // error
  }

  def b = new {}
}
